<resources>
    <string name="app_name">FaceApp</string>

    <!-- General -->
    <string name="save">保存</string>
    <string name="save_success">保存成功</string>
    <string name="save_fail">保存失败</string>

    <!-- Bottom Navigation Menu Items -->
    <string name="face_page">知面</string>
    <string name="resume_page">知人</string>
    <string name="game_page">游戏</string>
    <string name="me_page">我</string>

    <!-- Button on the Face Page -->
    <string name="input_rate">读人</string>
    <string name="output_rate">别人眼中的我</string>
    <string name="predict_impression">人工神入 预测第一印象</string>

    <!-- Button on the Me (Single) Page -->
    <string name="today_recommendation">今日推荐</string>
    <string name="open_recommendation">开通</string>
    <string name="close_recommendation">暂停</string>
    <string name="introduction_recommendation">今日推荐功能</string>
    <string name="my_information">我的信息</string>
    <string name="all_other_rate">历轮别人眼中的我</string>
    <string name="settings">设置</string>
    <string name="about_app">关于App</string>
    <string name="new_user_navigation">新手导航</string>
    <string name="recommend_to_friends">推荐给好友</string>
    <string name="suggestion_feedback">建议与反馈</string>

    <!-- Button on the My Information (Single and NoSingle) Page -->
    <string name="statement_my_information">请完善以下信息以方便我们向你作高度个性化的约会推荐</string>
    <string name="basic_information">基本信息</string>
    <string name="face_information">脸部信息</string>
    <string name="hate_information">Hate信息</string>
    <string name="love_information">Love信息</string>
    <string name="elimination_rules">Elimination Rules</string>
    <string name="face_preference_survey">照片约会意愿调查</string>
    <string name="resume_preference_survey">简历约会意愿调查</string>
    <string name="title_activity_basic_information_single">BasicInformationSingleActivity</string>

    <!-- Button on Face Information Activity -->
    <string name="pick_face_photo">从手机相册选择脸部照片</string>
    <string name="upload_face_photo">上传脸部照片</string>
    <string name="upload_face_info">上传脸部特征</string>
    <string name="measure_face_info">如何自己测量 \"脸部特征\"</string>
    <string name="uploading_success">上传成功</string>
    <string name="uploading_fail">上传失败</string>

    <!-- Today Recommendation Activity -->
    <string name="chat_with_ta">与TA聊天</string>
    <string name="not_interested_in_ta">我对TA不感兴趣</string>

</resources>
