<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/action_enter_chatroom"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/heart"
        android:contentDescription="@string/today_recommendation" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/action_open_recommendation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding = "16dp"
            android:textSize="20sp"
            android:text="@string/open_recommendation"/>

        <Button
            android:id="@+id/action_introduction_recommendation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding = "16dp"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/introduction_recommendation"/>

        <Button
            android:id="@+id/action_close_recommendation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding = "16dp"
            android:textSize="20sp"
            android:text="@string/close_recommendation"/>
    </LinearLayout>


    <Button
        android:id="@+id/action_my_information_single"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:padding = "16dp"
        android:textSize="20sp"
        android:text="@string/my_information"/>


    <Button
        android:id="@+id/action_all_other_rate_single"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding = "16dp"
        android:textSize="20sp"
        android:text="@string/all_other_rate"/>


    <Button
        android:id="@+id/action_logout_single"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding = "16dp"
        android:textSize="20sp"
        android:text="@string/action_logout"/>

</LinearLayout>