<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/resume_page_back"
        android:contentDescription="@string/resume_page" />

    <Button
        android:id="@+id/action_input_rate_resume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:text="@string/input_rate" />

    <Button
        android:id="@+id/action_output_rate_resume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:text="@string/output_rate" />

    <Button
        android:id="@+id/action_predict_impression_resume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textSize="20sp"
        android:text="@string/predict_impression" />

</LinearLayout>