<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawablePadding="10dp"
        android:drawableRight="@drawable/ic_right_arrow"
        android:drawableEnd="@drawable/ic_right_arrow"
        android:gravity="center|start"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textSize="18sp"
        android:text="@string/about_app" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawablePadding="10dp"
        android:drawableRight="@drawable/ic_right_arrow"
        android:drawableEnd="@drawable/ic_right_arrow"
        android:gravity="center|start"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textSize="18sp"
        android:text="@string/new_user_navigation" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawablePadding="10dp"
        android:drawableRight="@drawable/ic_right_arrow"
        android:drawableEnd="@drawable/ic_right_arrow"
        android:gravity="center|start"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textSize="18sp"
        android:text="@string/suggestion_feedback" />


    <Button
        android:id="@+id/action_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textSize="18sp"
        android:text="@string/logout" />

</LinearLayout>
